# MinuteMind

./: README.md  vercel.json
backend/: Dockerfile  __init__.py  mypy.ini  payload.json  pyproject.toml
backend/app/: db.py  deps.py  main.py  models.py  schemas.py  settings.py
backend/app/routes/: scripts.py  videos.py
backend/app/services/: images.py  llm.py  stitch.py  storage.py  tts.py
backend/app/utils/: prompts.py
backend/minutemind_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_scripts.py
frontend/: .env.example  .env.production  index.html  package 2.json  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App 2.vue  App.vue  main.ts  router.ts  style 2.css  style.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ProgressBar.vue  TopicForm.vue  VideoCard.vue
frontend/src/pages/: Home.vue  Library.vue  Player.vue  Settings.vue
infra/: cloudrun.yaml  docker-compose.yml
